--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-4664229395164784">
     
     <!-- Primary Meta Tags -->
     <title>CGAPH - Best Game Top-ups, Gift Cards & Subscriptions in Nepal | Instant Delivery</title>
