--- a/404.html
+++ b/404.html
@@ -145,6 +145,18 @@
     </style>
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4664229395164784"
+     crossorigin="anonymous"></script>
+<!-- game -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4664229395164784"
+     data-ad-slot="4120566264"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <main class="container" role="main">
         <div class="card" aria-labelledby="page-title">
             <div class="brand">
@@ -175,10 +187,10 @@
         </div>
     </main>
 </body>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4664229395164784"
-     crossorigin="anonymous"></script>
+
     
 </html>
+
 
 
 
