--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
-<script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+  <meta name="ezoic-site-verification" content="aiAOzyGwC9wX7Dha6V0JHaMGSWYRuQ" />
     
     <!-- Primary Meta Tags -->
     <title>CGAPH - Best Game Top-ups, Gift Cards & Subscriptions in Nepal | Instant Delivery</title>
