--- a/admin.html
+++ b/admin.html
@@ -3385,14 +3385,12 @@
                 </div>
                 
                 <!-- Ad Placement 1 - Admin Dashboard -->
-                <div class="ad-container">
-                    <ins class="adsbygoogle"
-                         style="display:block"
-                         data-ad-client="ca-pub-4664229395164784"
-                         data-ad-slot="4120566264"
-                         data-ad-format="auto"
-                         data-full-width-responsive="true"></ins>
-                </div>
+                <div id="ezoic-pub-ad-placeholder-101"></div>
+<script>
+    ezstandalone.cmd.push(function () {
+        ezstandalone.showAds(101);
+    });
+</script>
                 
                 <table id="paymentsTable">
                     <thead>
